k8s/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jenkins
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/jenkins"
        backend:
          service:
            name: jenkins
            port:
              number: 8080
