k8s/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jenkins
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "jenkins.local"
    http:
      paths:
      - pathType: Prefix
        path: "/" # "/jenkins(/|$)(.*)"
        backend:
          service:
            name: jenkins
            port:
              number: 8080
